assignment2_ast/src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'of'", "'inherit'", 
                     "'out'", "'true'", "'false'", "'break'", "'return'", 
                     "'for'", "'continue'", "'do'", "'function'", "'else'", 
                     "'if'", "'while'", "'boolean'", "'integer'", "'float'", 
                     "'string'", "'array'", "'void'", "'auto'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", "'('", 
                     "')'", "'['", "']'", "'.'", "','", "';'", "':'", "'{'", 
                     "'}'", "'='" ]

    symbolicNames = [ "<INVALID>", "CMT", "WS", "OF", "INHERIT", "OUT", 
                      "TRUE", "FALSE", "BREAK", "RETURN", "FOR", "CONTINUE", 
                      "DO", "FUNCTION", "ELSE", "IF", "WHILE", "BOOL_TYP", 
                      "INT_TYP", "FLOAT_TYP", "STRING_TYP", "ARR_TYP", "VOID_TYP", 
                      "AUTO_TYP", "PLUS", "MINUS", "MUL", "DIV", "MOD", 
                      "NOT", "AND", "OR", "D_EQ", "NOT_EQ", "LESS", "LEQ", 
                      "GREAT", "GEQ", "CONCAT", "LB", "RB", "SLB", "SRB", 
                      "DOT", "COMMA", "SM", "COlON", "LCB", "RCB", "EQ", 
                      "INTEGER", "FLOAT", "ID", "STRING", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_manydcl = 1
    RULE_dcl = 2
    RULE_vardcl = 3
    RULE_var_compl = 4
    RULE_idlist = 5
    RULE_tailid = 6
    RULE_funcdcl = 7
    RULE_return_typ = 8
    RULE_paramdcl = 9
    RULE_paramlist = 10
    RULE_params = 11
    RULE_param = 12
    RULE_inherit = 13
    RULE_typ = 14
    RULE_unarrtyp = 15
    RULE_atomtyp = 16
    RULE_arr_typ = 17
    RULE_dimension = 18
    RULE_dimtail = 19
    RULE_expr = 20
    RULE_relation_expr = 21
    RULE_logical_expr = 22
    RULE_logical_expr1 = 23
    RULE_add_expr = 24
    RULE_add_expr1 = 25
    RULE_mul_expr = 26
    RULE_mul_expr1 = 27
    RULE_not_expr = 28
    RULE_sign_expr = 29
    RULE_factor = 30
    RULE_boolean = 31
    RULE_array = 32
    RULE_exprlist = 33
    RULE_string_op = 34
    RULE_logical_op = 35
    RULE_relatn_op = 36
    RULE_add_op = 37
    RULE_mul_op = 38
    RULE_index_expr = 39
    RULE_call_expr = 40
    RULE_sub_expr = 41
    RULE_statement = 42
    RULE_s_assign = 43
    RULE_lhs = 44
    RULE_s_if = 45
    RULE_s_else = 46
    RULE_s_for = 47
    RULE_f_cond = 48
    RULE_s_while = 49
    RULE_s_dowhile = 50
    RULE_s_break = 51
    RULE_s_continue = 52
    RULE_s_return = 53
    RULE_s_call = 54
    RULE_s_block = 55
    RULE_inblock = 56
    RULE_stm_list = 57
    RULE_stm_id = 58

    ruleNames =  [ "program", "manydcl", "dcl", "vardcl", "var_compl", "idlist", 
                   "tailid", "funcdcl", "return_typ", "paramdcl", "paramlist", 
                   "params", "param", "inherit", "typ", "unarrtyp", "atomtyp", 
                   "arr_typ", "dimension", "dimtail", "expr", "relation_expr", 
                   "logical_expr", "logical_expr1", "add_expr", "add_expr1", 
                   "mul_expr", "mul_expr1", "not_expr", "sign_expr", "factor", 
                   "boolean", "array", "exprlist", "string_op", "logical_op", 
                   "relatn_op", "add_op", "mul_op", "index_expr", "call_expr", 
                   "sub_expr", "statement", "s_assign", "lhs", "s_if", "s_else", 
                   "s_for", "f_cond", "s_while", "s_dowhile", "s_break", 
                   "s_continue", "s_return", "s_call", "s_block", "inblock", 
                   "stm_list", "stm_id" ]

    EOF = Token.EOF
    CMT=1
    WS=2
    OF=3
    INHERIT=4
    OUT=5
    TRUE=6
    FALSE=7
    BREAK=8
    RETURN=9
    FOR=10
    CONTINUE=11
    DO=12
    FUNCTION=13
    ELSE=14
    IF=15
    WHILE=16
    BOOL_TYP=17
    INT_TYP=18
    FLOAT_TYP=19
    STRING_TYP=20
    ARR_TYP=21
    VOID_TYP=22
    AUTO_TYP=23
    PLUS=24
    MINUS=25
    MUL=26
    DIV=27
    MOD=28
    NOT=29
    AND=30
    OR=31
    D_EQ=32
    NOT_EQ=33
    LESS=34
    LEQ=35
    GREAT=36
    GEQ=37
    CONCAT=38
    LB=39
    RB=40
    SLB=41
    SRB=42
    DOT=43
    COMMA=44
    SM=45
    COlON=46
    LCB=47
    RCB=48
    EQ=49
    INTEGER=50
    FLOAT=51
    ID=52
    STRING=53
    ERROR_CHAR=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def manydcl(self):
            return self.getTypedRuleContext(MT22Parser.ManydclContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.manydcl()
            self.state = 119
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManydclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dcl(self):
            return self.getTypedRuleContext(MT22Parser.DclContext,0)


        def manydcl(self):
            return self.getTypedRuleContext(MT22Parser.ManydclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_manydcl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitManydcl" ):
                return visitor.visitManydcl(self)
            else:
                return visitor.visitChildren(self)




    def manydcl(self):

        localctx = MT22Parser.ManydclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_manydcl)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.dcl()
                self.state = 122
                self.manydcl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.dcl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardcl(self):
            return self.getTypedRuleContext(MT22Parser.VardclContext,0)


        def funcdcl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dcl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDcl" ):
                return visitor.visitDcl(self)
            else:
                return visitor.visitChildren(self)




    def dcl(self):

        localctx = MT22Parser.DclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_dcl)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.vardcl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.funcdcl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COlON(self):
            return self.getToken(MT22Parser.COlON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def SM(self):
            return self.getToken(MT22Parser.SM, 0)

        def var_compl(self):
            return self.getTypedRuleContext(MT22Parser.Var_complContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardcl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardcl" ):
                return visitor.visitVardcl(self)
            else:
                return visitor.visitChildren(self)




    def vardcl(self):

        localctx = MT22Parser.VardclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardcl)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.idlist()
                self.state = 132
                self.match(MT22Parser.COlON)
                self.state = 133
                self.typ()
                self.state = 134
                self.match(MT22Parser.SM)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.var_compl()
                self.state = 137
                self.match(MT22Parser.SM)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_complContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def var_compl(self):
            return self.getTypedRuleContext(MT22Parser.Var_complContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COlON(self):
            return self.getToken(MT22Parser.COlON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def EQ(self):
            return self.getToken(MT22Parser.EQ, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_var_compl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_compl" ):
                return visitor.visitVar_compl(self)
            else:
                return visitor.visitChildren(self)




    def var_compl(self):

        localctx = MT22Parser.Var_complContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_compl)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.match(MT22Parser.ID)
                self.state = 142
                self.match(MT22Parser.COMMA)
                self.state = 143
                self.var_compl()
                self.state = 144
                self.match(MT22Parser.COMMA)
                self.state = 145
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.match(MT22Parser.ID)
                self.state = 148
                self.match(MT22Parser.COlON)
                self.state = 149
                self.typ()
                self.state = 150
                self.match(MT22Parser.EQ)
                self.state = 151
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def tailid(self):
            return self.getTypedRuleContext(MT22Parser.TailidContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_idlist)
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.match(MT22Parser.ID)
                self.state = 156
                self.tailid()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TailidContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def tailid(self):
            return self.getTypedRuleContext(MT22Parser.TailidContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_tailid

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTailid" ):
                return visitor.visitTailid(self)
            else:
                return visitor.visitChildren(self)




    def tailid(self):

        localctx = MT22Parser.TailidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_tailid)
        try:
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.match(MT22Parser.COMMA)
                self.state = 161
                self.match(MT22Parser.ID)
                self.state = 162
                self.tailid()
                pass
            elif token in [MT22Parser.COlON]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COlON(self):
            return self.getToken(MT22Parser.COlON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def return_typ(self):
            return self.getTypedRuleContext(MT22Parser.Return_typContext,0)


        def paramdcl(self):
            return self.getTypedRuleContext(MT22Parser.ParamdclContext,0)


        def inherit(self):
            return self.getTypedRuleContext(MT22Parser.InheritContext,0)


        def s_block(self):
            return self.getTypedRuleContext(MT22Parser.S_blockContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcdcl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdcl" ):
                return visitor.visitFuncdcl(self)
            else:
                return visitor.visitChildren(self)




    def funcdcl(self):

        localctx = MT22Parser.FuncdclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcdcl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(MT22Parser.ID)
            self.state = 167
            self.match(MT22Parser.COlON)
            self.state = 168
            self.match(MT22Parser.FUNCTION)
            self.state = 169
            self.return_typ()
            self.state = 170
            self.paramdcl()
            self.state = 171
            self.inherit()
            self.state = 172
            self.s_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def VOID_TYP(self):
            return self.getToken(MT22Parser.VOID_TYP, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_return_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_typ" ):
                return visitor.visitReturn_typ(self)
            else:
                return visitor.visitChildren(self)




    def return_typ(self):

        localctx = MT22Parser.Return_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_return_typ)
        try:
            self.state = 176
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOL_TYP, MT22Parser.INT_TYP, MT22Parser.FLOAT_TYP, MT22Parser.STRING_TYP, MT22Parser.ARR_TYP, MT22Parser.AUTO_TYP]:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.typ()
                pass
            elif token in [MT22Parser.VOID_TYP]:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.match(MT22Parser.VOID_TYP)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamdclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def paramlist(self):
            return self.getTypedRuleContext(MT22Parser.ParamlistContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_paramdcl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamdcl" ):
                return visitor.visitParamdcl(self)
            else:
                return visitor.visitChildren(self)




    def paramdcl(self):

        localctx = MT22Parser.ParamdclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramdcl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(MT22Parser.LB)
            self.state = 179
            self.paramlist()
            self.state = 180
            self.match(MT22Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def params(self):
            return self.getTypedRuleContext(MT22Parser.ParamsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paramlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamlist" ):
                return visitor.visitParamlist(self)
            else:
                return visitor.visitChildren(self)




    def paramlist(self):

        localctx = MT22Parser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramlist)
        try:
            self.state = 184
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INHERIT, MT22Parser.OUT, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 182
                self.params()
                pass
            elif token in [MT22Parser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(MT22Parser.ParamContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def params(self):
            return self.getTypedRuleContext(MT22Parser.ParamsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = MT22Parser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_params)
        try:
            self.state = 191
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 186
                self.param()
                self.state = 187
                self.match(MT22Parser.COMMA)
                self.state = 188
                self.params()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 190
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COlON(self):
            return self.getToken(MT22Parser.COlON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = MT22Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 193
                self.match(MT22Parser.INHERIT)


            self.state = 197
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 196
                self.match(MT22Parser.OUT)


            self.state = 199
            self.match(MT22Parser.ID)
            self.state = 200
